Grand fix overflow

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
     width: 100%;
-    overflow-x: hidden;
     margin: 0;
     font-family: 'Poppins';
     font-style: normal;
@@ -33,6 +32,8 @@ h1 {
     padding: 0 19px;
   }
     
+
+
 .black-title {
     background-color: #1B1C37;
     position: absolute;
@@ -48,6 +49,12 @@ h1 {
     max-width: 662px;
 }
 
+.back-title {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 982px;
+}
 
 .content-title {
     max-width: 535px;
